--- a/RecordRoster/RecordRoster.csproj
+++ b/RecordRoster/RecordRoster.csproj
@@ -126,12 +126,15 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AlbumController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DataAccessLayer\RecordRosterDb.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Album.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="Views\Album\Details.cshtml" />
+    <None Include="Views\Album\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -182,9 +185,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Album\Index.cshtml" />
     <Content Include="Views\Album\Library.cshtml" />
   </ItemGroup>
   <ItemGroup>
