--- a/RecordRoster/RecordRoster.csproj
+++ b/RecordRoster/RecordRoster.csproj
@@ -127,6 +127,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AlbumController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SongController.cs" />
     <Compile Include="DataAccessLayer\RecordRosterDb.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -137,6 +138,8 @@
     <None Include="Views\Album\Details.cshtml" />
     <None Include="Views\Album\Add.cshtml" />
     <Content Include="Views\Album\Update.cshtml" />
+    <Content Include="Views\Song\Add.cshtml" />
+    <Content Include="Views\Song\Update.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
