Clean up & fix database/data model handling

--- a/RecordRoster/RecordRoster.csproj
+++ b/RecordRoster/RecordRoster.csproj
@@ -133,6 +133,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Album.cs" />
+    <Compile Include="Models\AlbumDetails.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Views\Album\Details.cshtml" />
