--- a/RecordRoster/RecordRoster.csproj
+++ b/RecordRoster/RecordRoster.csproj
@@ -132,10 +132,23 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504100054391_InitialCreate.cs" />
+    <Compile Include="Migrations\202504100054391_InitialCreate.Designer.cs">
+      <DependentUpon>202504100054391_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202504112222272_UpdateSchema.cs" />
+    <Compile Include="Migrations\202504112222272_UpdateSchema.Designer.cs">
+      <DependentUpon>202504112222272_UpdateSchema.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\AlbumDetails.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AlbumRepository.cs" />
+    <Compile Include="Repositories\IAlbumRepository.cs" />
+    <Compile Include="Repositories\ISongRepository.cs" />
+    <Compile Include="Repositories\SongRepository.cs" />
     <None Include="Views\Album\Details.cshtml" />
     <None Include="Views\Album\Add.cshtml" />
     <Content Include="Views\Album\Update.cshtml" />
@@ -224,6 +237,14 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\jquery-3.7.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.0.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202504100054391_InitialCreate.resx">
+      <DependentUpon>202504100054391_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504112222272_UpdateSchema.resx">
+      <DependentUpon>202504112222272_UpdateSchema.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
