--- a/RecordRoster/Web.config
+++ b/RecordRoster/Web.config
@@ -8,12 +8,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-	<connectionStrings>
-		<add name="RecordRosterDB"
-			 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Integrated Security=True;"
-			 providerName="System.Data.SqlClient" />
-	</connectionStrings>
-  <appSettings>
+		<connectionStrings>
+			<add name="RecordRosterDb"
+				 connectionString="Server=(localdb)\MSSQLLocalDB;Database=RecordRosterDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+				 providerName="System.Data.SqlClient" />
+		</connectionStrings>
+		<appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
